# condapoetry

./: README.md  anaconda-deps.ana  environment.yml  pyproject.toml
tests/: test_condapoetry.py
