[tool.poetry]
name = "condapoetry"
version = "0.1.0"
description = ""
authors = ["Ryan Allen <ryan.allen@nokia.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
